--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>jonathans boba code<h1>
-    <p>me want boba also a word joiner<p>
+    <p>me want boba also a word joiner but doesnt work as no js<p>
     <img src="https://images.vexels.com/media/users/3/302129/isolated/preview/0fe21617b0555ac7dd0ea5c1603adf37-kawaii-boba-drink-with-a-blobfish-character.png?w=360"/>
     <iframe width="420" height="315"
         src="https://www.youtube.com/embed/dQw4w9WgXcQautoplay=1">
@@ -24,6 +24,5 @@
           <span id="display-text"></span>
         </div>
       </div>
-      <script src="script.js"></script>
 </body>
 </html>
